<resources>
    <string name="app_name" translatable="false">EjercicioHGAJ</string>
    <string name="ingresa">Ingresa datos</string>
    <string name="hintFecha">Fecha de nacimiento</string>
    <string name="hintCuenta">Número de cuenta </string>
    <string name="hintCorreo">Correo</string>
    <string name="buttComenzar">Comenzar</string>
    <string name="hintNombre">Nombre</string>
    <string name="idioma">Idioma</string>
    <string name="fecha_de_nacimiento" translatable="false">%1d / %2d /%3d </string>
    <string name="Regresar">regresar</string>
    <string name="tv_resultado_nombre">Nombre: %s</string>
    <string name="tv_resultado_cuenta">Cuenta: %s</string>
    <string name="correo2">Correo: %s</string>
    <string name="edad">Edad: %d</string>
    <string name="en" translatable="false">en</string>
    <string name="esp" translatable="false">esp</string>
    <string name="correo_no_valido">Correo no valido </string>
    <string name="nombre_vacio">Coloca tu nombre </string>
    <string name="numerodecuenta_vacio">Coloca tu numero de cuenta </string>
    <string name="Error_cuenta">El número de cuenta debe ser de 9 dígitos</string>
    <string name="SignoZ">Signo Zodiacal </string>
    <string name="HoroscopoC">Horoscopo Chino </string>







</resources>